Fix slight alignment

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,6 @@ header div a {
 .black {
     background: linear-gradient(-20deg, #222, #000, #222);
     bottom: 30px;
-    right: 10px;
     width: 3%;
     height: 80px;
     z-index: 10;
